Fixed some problems from first PR - Changed injection method @Autowired now uses on c-tors, Created DTO.
Added message broker Kafka