@@ -7,6 +7,7 @@
   <properties>
     <maven.compiler.source>23</maven.compiler.source>
     <maven.compiler.target>23</maven.compiler.target>
+    <maven.compiler.parameters>true</maven.compiler.parameters>
   </properties>
   <version>1.0-SNAPSHOT</version>
   <name>crudTask Maven Webapp</name>
@@ -35,6 +36,12 @@
       <version>3.3.5</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>6.2.0</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
     <dependency>
@@ -42,6 +49,21 @@
       <artifactId>h2</artifactId>
       <version>2.3.232</version>
       <scope>runtime</scope>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+      <version>3.3.0</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.36</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -52,9 +74,10 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <compilerArgs>
-            <arg>-parameters</arg>
+          <compilerArgs>--enable-preview
           </compilerArgs>
+            <source>23</source>
+            <target>23</target>
         </configuration>
       </plugin>
 
